--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,108 @@
-.App {
+/*html tag*/
+body {
+  margin: 0px;
+}
+
+h1 {
+  margin: 0px;
+  margin-left: 20px;
+}
+
+h2 {
+  margin: 0px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*링크 클릭 보라색 및 밑줄 표시 삭제*/
+a {
+  color: black;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*class-selector*/
+/*using grid-layout = there are 3 partition (header, main, footer)*/
+/*우선 화면 규격에 맞게 규격 설정(html 표준인지는 모름, 스크롤없이)*/
+.page-container {
+  display: grid;
+  row-gap: 3px;
+  grid-auto-rows: 50px 490px 80px;
+  grid-template-areas:
+    "header header header"
+    "main main main"
+    "footer footer footer";
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.page-header {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
+  grid-area: header;
+  border: 3px solid black;
+}
+
+.page-main {
+  grid-area: main;
+  border: 3px solid black;
+}
+
+.page-footer {
+  grid-area: footer;
+  border: 3px solid black;
+}
+
+.navbar_item {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  list-style: none;
+  padding-right: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.form_group_register {
+  display: grid;
+  grid-template-rows: 40px 50px 50px 50px 50px 110px;
+  align-items: center;
+  width: 250px;
+  height: 350px;
+  margin-left: 490px;
+  margin-top: 130px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: black solid 2px;
+  background-color: whitesmoke;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form_group_login {
+  display: grid;
+  grid-template-rows: 40px 50px 50px;
+  align-items: center;
+  width: 250px;
+  height: 200px;
+  margin-left: 490px;
+  margin-top: 190px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border: black solid 2px;
+  background-color: whitesmoke;
+}
+
+.input_value {
+  margin: 6px;
+}
+
+.btn {
+  margin-right: 48px;
+  margin-left: 48px;
+  margin-bottom: 20px;
+  width: 150px;
+  height: 40px;
+  font-size: 25px;
+}
+
+.testText1 {
+  text-align: center;
+  padding: 200px;
+}
+/*id selector*/
+#login {
+  padding-right: 25px;
 }
