--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,4 @@
 @font-face {
-    font-family: 'Dongle-bold';
-    font-size: initial;
-    font-style: inherit;
-    font-weight: 100;
-    src: url('./fonts/Dongle-Regular.ttf') format('truetype');
+    font-family: 'CookieRun Bold';
+    src: url('./fonts/CookieRunBold.ttf') format('truetype');
 }
